# conways-game-of-life

./: CMakeLists.txt  Makefile  README.md
include/: interface.h
src/: common.c  main.c
src/back_end/: mpi.c  openmp.c  pthread.c
